[gd_scene load_steps=2 format=3 uid="uid://b4fryjdrmcjyu"]

[ext_resource type="Script" path="res://scripts/cell.gd" id="1_8sjuh"]

[node name="Cell" type="Node2D"]
process_mode = 1
script = ExtResource("1_8sjuh")

[node name="CellLabel" type="Label" parent="."]
offset_left = 387.0
offset_top = 100.0
offset_right = 637.0
offset_bottom = 150.0
text = "This is your prison cell"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CourtButton" type="Button" parent="."]
offset_left = 387.0
offset_top = 250.0
offset_right = 637.0
offset_bottom = 325.0
text = "Go to the Court Room
"

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 500.0
one_shot = true
autostart = true

[node name="TimerLabel" type="Label" parent="."]
offset_left = 25.0
offset_top = 10.0
offset_right = 225.0
offset_bottom = 60.0
text = "Time Remaining: 00:00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(512, 300)

[connection signal="pressed" from="CourtButton" to="." method="_on_court_button_pressed"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
